Изменения по работе дизайна, доработка и разработка страниц

--- a/BusinessCardProject/Client/BusinessCardProject.Client/BusinessCardProject.Client.csproj
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/BusinessCardProject.Client.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
